--- a/01-lessons/a.html
+++ b/01-lessons/a.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>计算</title>
-  <script type="text/javascript" src="a.js"></script>
 </head>
 <body>
-<div class="rec">
-  <label for="宽度："></label>
-  <input class="rec__width" type="textbox">
-  <label for="高度："></label>
-  <input class="rec__height" type="textbox">
-  <input class="rec__calc" type="button" value="计算">
-  <label for="周长："></label>
-  <input class="rec__perimeter" type="textbox">
-  <label for="面积："></label>
-  <input class="rec__area" type="textbox">
-</div>
+  <div class="rec">
+    <label for="rec__width">宽度：</label>
+    <input id="rec__width" type="textbox" value=""/></br>
+    <label for="rec__height">高度：</label>
+    <input id="rec__height" type="textbox" value=""/></br>
+    <input id="rec__calc" type="button" value="计算" onclick="account()"></br>
+    <label for="rec__perimeter">周长：</label>
+    <input id="rec__perimeter" type="textbox" value=""/></br>
+    <label for="rec__area">面积：</label>
+    <input id="rec__area" type="textbox" value=""/>
+  </div>
 </body>
+<script type="text/javascript" src="a.js"></script>
 </html>
