--- a/01-calculate/a.html
+++ b/01-calculate/a.html
@@ -18,4 +18,9 @@
   </div>
 </body>
 <script type="text/javascript" src="a.js"></script>
+<!--<script type="text/javascript">
+window.onload = function(){
+  document.getElementById('rec__width').focus();
+}
+</script>-->
 </html>
