--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>课程案例</title>
 </head>
 <body>
-  矩形计算器：https://xingjialei.github.io/SPA/01-calculate/a.html
-  定时器按钮：https://xingjialei.github.io/SPA/02-intrinsic-control/timer.html
-  密码可见：https://xingjialei.github.io/SPA/02-intrinsic-control/visible-password.html
-  范围控件：https://xingjialei.github.io/SPA/02-intrinsic-control/range.html
-  进度条控件：https://xingjialei.github.io/SPA/02-intrinsic-control/process-bar.html
+<p> 矩形计算器：https://xingjialei.github.io/SPA/01-calculate/a.html</p>
+<p>定时器按钮：https://xingjialei.github.io/SPA/02-intrinsic-control/timer.html</p>
+<p>密码可见：https://xingjialei.github.io/SPA/02-intrinsic-control/visible-password.html</p>
+<p>范围控件：https://xingjialei.github.io/SPA/02-intrinsic-control/range.html</p>
+<p>进度条控件：https://xingjialei.github.io/SPA/02-intrinsic-control/process-bar.html</p>
 </body>
 </html>
