--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>课程案例</title>
 </head>
 <body>
-<p> 矩形计算器：https://xingjialei.github.io/SPA/01-calculate/a.html</p>
-<p>定时器按钮：https://xingjialei.github.io/SPA/02-intrinsic-control/timer.html</p>
-<p>密码可见：https://xingjialei.github.io/SPA/02-intrinsic-control/visible-password.html</p>
-<p>范围控件：https://xingjialei.github.io/SPA/02-intrinsic-control/range.html</p>
-<p>进度条控件：https://xingjialei.github.io/SPA/02-intrinsic-control/process-bar.html</p>
+<p> 矩形计算器：<a href="https://xingjialei.github.io/SPA/01-calculate/a.html">https://xingjialei.github.io/SPA/01-calculate/a.html</a></p>
+<p>定时器按钮：<a href="https://xingjialei.github.io/SPA/02-intrinsic-control/timer.html">https://xingjialei.github.io/SPA/02-intrinsic-control/timer.html</a></p>
+<p>密码可见：<a href="https://xingjialei.github.io/SPA/02-intrinsic-control/visible-password.html">https://xingjialei.github.io/SPA/02-intrinsic-control/visible-password.html</a></p>
+  <p>范围控件：<a href="https://xingjialei.github.io/SPA/02-intrinsic-control/range.html">https://xingjialei.github.io/SPA/02-intrinsic-control/range.html</a></p>
+  <p>进度条控件：<a href="https://xingjialei.github.io/SPA/02-intrinsic-control/process-bar.html">https://xingjialei.github.io/SPA/02-intrinsic-control/process-bar.html</a></p>
 </body>
 </html>
