--- a/02-intrinsic-control/visible-password.html
+++ b/02-intrinsic-control/visible-password.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <label for="psd">密码：</label>
-  <input type="password" id="psd" value="123"/>
+  <input type="password" id="psd" value=""/>
 </body>
 <script src="visible-password.js"></script>
 </html>
