--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <p>密码可见：<a href="https://xingjialei.github.io/SPA/02-intrinsic-control/visible-password.html">https://xingjialei.github.io/SPA/02-intrinsic-control/visible-password.html</a></p>
   <p>范围控件：<a href="https://xingjialei.github.io/SPA/02-intrinsic-control/range.html">https://xingjialei.github.io/SPA/02-intrinsic-control/range.html</a></p>
   <p>进度条控件：<a href="https://xingjialei.github.io/SPA/02-intrinsic-control/process-bar.html">https://xingjialei.github.io/SPA/02-intrinsic-control/process-bar.html</a></p>
+  <a href="03-verify/01-field.html">字段级验证</a>
+  <a href="03-verify/02-chars.html">字符级验证</a>
+  <a href="03-verify/03-form.html">表单级验证</a>
+  <a href="03-verify/04-h5.html">H5验证</a>
 </body>
 </html>
