--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
   <a href="03-verify/02-chars.html">字符级验证</a>
   <a href="03-verify/03-form.html">表单级验证</a>
   <a href="03-verify/04-h5.html">H5验证</a>
+  <a href="04-component/01-function.html">二进熵函数</a>
+  <a href="04-component/03-excel.html">excel表格</a>
+  <a href="04-component/02-map.html">百度地图</a>
 </body>
 </html>
