--- a/04-component/03-excel.html
+++ b/04-component/03-excel.html
@@ -3,136 +3,39 @@
 <head>
   <meta charset="utf-8"/>
   <title>excel表格</title>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.38.0/handsontable.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.38.0/handsontable.min.css">
 </head>
 <body>
   <div id="example"></div>
 </body>
+
 </html>
 <script type="text/javascript">
-var data = getData();
-var rowsCount = data.length;
+var data = [
+  ["login_name", "登录名", "C(9)", "N", "Y",""],
+  ["password", "密码", "C(9)", "N", "N",""],
+  ["chinese_name", "中文名", "C(10)", "N", "N",""],
+  ["english_name", "英文名", "C(10)", "Y", "N",""],
+  ["gender", "性别", "C(1)", "Y", "N",""],
+  ["address", "家庭住址", "C(100)", "Y", "N",""],
+  ["mobile", "联系电话", "C(15)", "Y", "N",""],
+  ["comment", "备注", "C(100)", "Y", "N",""]
+];
 
-var hot = Handsontable(document.getElementById('example'), {
+var container = document.getElementById('example');
+var hot = new Handsontable(container, {
   data: data,
-  height: 456,
-  colWidths: 105,
-  minCols: 26,
-  minRows: 500,
   rowHeaders: true,
   colHeaders: [
-    'Task',
-    'Owner',
-    'Team',
-    'Status',
-    'Start date',
-    'End date',
-    'At risk',
-    '% complete'
+    '字段',
+    '说明',
+    '数据类型',
+    '允许为空',
+    '主键',
+    '备注'
   ],
-  columnSorting: true,
-  filters: true,
-  dropdownMenu: true,
-  contextMenu: true,
-  autoRowSize: true,
-  manualColumnMove: true,
-  manualRowMove: true,
-  fillHandle: {
-    autoInsertRow: false,
-  },
-  cells: function(row, column) {
-    var cellMeta = {};
-
-    if (row >= rowsCount) {
-      return cellMeta;
-    }
-
-    if (column === 1) {
-      cellMeta.type = 'dropdown';
-      cellMeta.source = [
-        'Ben',
-        'Chris',
-        'Jessica',
-        'Kate',
-        'Michael',
-        'Monica',
-        'Omar',
-        'Paul',
-        'Samuel',
-      ];
-
-    } else if (column === 2) {
-      cellMeta.readOnly = true;
-      cellMeta.type = 'text';
-      cellMeta.renderer = function(hotInstance, TD, row, col, prop, value) {
-        var colors = {
-          Red: '#e87677',
-          Green: '#66e100',
-          Blue: '#00a7fe',
-          Purple: '#6623e2',
-          Orange: '#ffad24',
-          Yellow: '#ffe300',
-        };
-
-        TD.style.color = colors[value];
-        TD.textContent = value;
-      };
-
-    } else if (column === 3) {
-      cellMeta.type = 'dropdown';
-      cellMeta.source = [
-        'New',
-        'Accepted',
-        'Rejected',
-        'In progress',
-        'Completed',
-      ];
-
-    } else if (column === 4 || column === 5) {
-      cellMeta.type = 'date';
-      cellMeta.dateFormat = 'DD/MM/YYYY';
-
-    } else if (column === 6) {
-      var isChecked = this.instance.getDataAtCell(this.instance.toVisualRow(row), column);
-
-      cellMeta.type = 'checkbox';
-      cellMeta.className = 'htCenter' + (isChecked ? ' at-risk-checked' : '');
-
-    } else if (column === 7) {
-      cellMeta.width = 110;
-      cellMeta.renderer = function(hotInstance, TD, row, col, prop, value, cellProperties) {
-        var progressBar = document.createElement('progress');
-
-        value = parseInt(value, 10);
-
-        progressBar.max = 100;
-        progressBar.value = isNaN(value) ? 0 : value;
-
-        TD.textContent = '';
-        TD.appendChild(progressBar);
-      };
-    }
-
-    return cellMeta;
-  },
-  // Create virtual column data ("Team" column)
-  modifyData: function(row, column, valueHolder, ioMode) {
-    if (this.toPhysicalColumn(column) === 2 && ioMode === 'get') {
-      valueHolder.value = getOwnerTeam(this.getDataAtCell(this.toVisualRow(row), this.toVisualColumn(1)));
-    }
-  }
+  manualColumnResize: true,
+  manualRowResize: true
 });
-
-function getOwnerTeam(owner) {
-  var teamOwners = {
-    Red: ['Michael', 'Ben'],
-    Green: ['Omar', 'Samuel'],
-    Blue: ['Kate', 'Monica'],
-    Purple: ['Chris'],
-    Orange: ['Paul'],
-    Yellow: ['Jessica'],
-  };
-
-  return Object.keys(teamOwners).reduce(function(acc, team) {
-    return teamOwners[team].indexOf(owner) !== -1 ? team : acc;
-  }, null);
 </script>
