--- a/05-module/password/index.html
+++ b/05-module/password/index.html
@@ -10,8 +10,10 @@
 	<script type="text/javascript" src="password.js"></script>
 </head>
 <body>
+	<button id="add">添加密码框</button>
+	<button id="get">获取密码</button>
 	<div id="main">
-		
+
 	</div>
 </body>
 </html>
