"module-twice-twice"

--- a/05-module-twice/index.html
+++ b/05-module-twice/index.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="js/config.js"></script>
 	<script type="text/javascript" src="js/header.js"></script>
 	<script type="text/javascript" src="js/menu.js"></script>
-	<script type="text/javascript" src="js/stage.js"></script>
+	<!-- <script type="text/javascript" src="js/stage.js"></script> -->
 	<script type="text/javascript" src="js/footer.js"></script>
 	<script type="text/javascript" src="js/login.js"></script>
 </html>
